<resources>
    <string name="app_name"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login_registration">LoginRegistrationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_lr">LRActivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_a_user">Not a user?</string>
    <string name="register_now">Register Now</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
